# web-recon-suite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: __init__.py  test_auth.py  test_config.py  test_endpoints.py  test_modules.py  test_scanner.py
web_recon/: __init__.py  __main__.py  cli.py
web_recon/core/: __init__.py  auth.py  endpoints.py  scanner.py
web_recon/modules/: __init__.py  cors.py  credentials.py  report.py
web_recon/utils/: __init__.py  config.py  logger.py
